Fixed height problem causing a scrollbar

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -295,7 +295,6 @@ div {
 
 #game-content {
   width: 100%;
-  height: calc(90vh - 400px);
   background: #1b1b1c; }
 
 .display {
