--- a/assets/scss/_games.scss
+++ b/assets/scss/_games.scss
@@ -70,7 +70,6 @@
 
 #game-content {
     width: 100%;
-    height: calc(90vh - 400px);
     background: #1b1b1c;
 }
 
